# xngin

./: Cargo.toml  LICENSE-MIT  README.md
doradb-bench/: .gitignore  Cargo.toml
doradb-bench/benches/: bitmap_count.rs  bitmap_extend.rs  bitmap_intersect.rs  bitmap_range_iter.rs  bitmap_shift.rs  codec_add.rs  memcmp_sort.rs
doradb-bench/examples/: codec_add.rs
doradb-catalog/: Cargo.toml
doradb-catalog/src/: error.rs  lib.rs  mem_impl.rs
doradb-compute/: Cargo.toml
doradb-compute/src/: arith.rs  cmp.rs  error.rs  lib.rs  logic.rs
doradb-compute/src/eval/: builder.rs  mod.rs  plan.rs
doradb-datatype/: Cargo.toml
doradb-datatype/src/: align.rs  error.rs  lib.rs  memcmp.rs
doradb-expr/: Cargo.toml
doradb-expr/src/: expr.rs  expr_ext.rs  func.rs  id.rs  lib.rs  source.rs  util.rs
doradb-expr/src/fold/: add.rs  cmp.rs  mod.rs  neg.rs  not.rs  sub.rs
doradb-plan/: Cargo.toml
doradb-plan/src/: digraph.rs  error.rs  explain.rs  lib.rs
doradb-plan/src/join/: graph.rs  mod.rs
doradb-plan/src/join/reorder/: dphyp.rs  dpsize.rs  mod.rs
doradb-plan/src/lgc/: alias.rs  builder.rs  col.rs  mod.rs  op.rs  query.rs  reflect.rs  resolv.rs  scope.rs  setop.rs
doradb-plan/src/phy/: builder.rs  mod.rs
doradb-plan/src/rule/: col_prune.rs  derived_unfold.rs  expr_simplify.rs  fix.rs  joingraph_initialize.rs  mod.rs  op_eliminate.rs  op_id.rs  outerjoin_reduce.rs  pred_move.rs  pred_pullup_old.rs  pred_pushdown.rs  pred_pushdown_old.rs
doradb-sql/: Cargo.toml
doradb-sql/src/parser/: dml.rs  expr.rs
doradb-sql/tests/: pretty.rs
doradb-storage/: Cargo.toml
doradb-storage/examples/: multi_threaded_trx.rs
doradb-storage/src/: alloc.rs  array.rs  attr.rs  bitmap.rs  block.rs  error.rs  latch.rs  lib.rs  sel.rs  value.rs
doradb-storage/src/buffer/: frame.rs  guard.rs  mod.rs  page.rs  ptr.rs
doradb-storage/src/codec/: mod.rs
doradb-storage/src/col/: alloc.rs  array.rs  attr.rs  bitmap.rs  chunk.rs  mod.rs  repr.rs  sel.rs  sma.rs
doradb-storage/src/col/codec/: mod.rs  single.rs
doradb-storage/src/index/: block_index.rs  mod.rs
doradb-storage/src/row/: action.rs  layout.rs  mod.rs  ops.rs  value.rs
doradb-storage/src/table/: layout.rs  mod.rs  mvcc.rs
doradb-storage/src/trx/: mod.rs  redo.rs  sys.rs  undo.rs
doradb-tpch-tests/: Cargo.toml
doradb-tpch-tests/src/: lib.rs
doradb-tpch-tests/tests/: build_lgc.rs  parse.rs  reflect.rs  rule_optimize.rs
xngin-bench/: Cargo.toml
xngin-bench/benches/: bitmap_count.rs  bitmap_extend.rs  bitmap_foreach.rs  bitmap_intersect.rs  bitmap_merge.rs  bitmap_range_iter.rs  bitmap_shift.rs  codec_add.rs  memcmp_sort.rs
xngin-bench/examples/: codec_add.rs
xngin-catalog/: Cargo.toml
xngin-catalog/src/: error.rs  lib.rs  mem_impl.rs  types.rs
xngin-common/: Cargo.toml
xngin-common/src/: align.rs  alloc.rs  array.rs  bitmap.rs  byte_repr.rs  error.rs  lib.rs  repr.rs  sma.rs
xngin-common/src/array/: mod.rs  vec.rs  view.rs
xngin-common/src/bitmap/: ffi_bitmap.rs  mod.rs  vec.rs  vec_bitmap.rs  view.rs
xngin-common/src/psma/: lookup.rs  mod.rs
xngin-compute/: Cargo.toml
xngin-compute/src/: arith.rs  binary.rs  cmp.rs  error.rs  eval.rs  lib.rs  logic.rs  sel.rs  types.rs
xngin-compute/src/arith/: mod.rs
xngin-compute/src/bitmap/: mod.rs
xngin-compute/src/col/: mod.rs  nonsized.rs  sized.rs  typed.rs
xngin-compute/src/eval/: builder.rs  mod.rs  plan.rs
xngin-datatype/: Cargo.toml
xngin-datatype/src/: align.rs  error.rs  konst.rs  lib.rs  macros.rs  memcmp.rs  precise.rs  runtime.rs
xngin-expr/: Cargo.toml
xngin-expr/src/: controlflow.rs  error.rs  expr.rs  func.rs  id.rs  infer.rs  lib.rs  pred.rs  source.rs  util.rs
xngin-expr/src/fold/: add.rs  cmp.rs  mod.rs  neg.rs  not.rs  sub.rs
xngin-frontend/: Cargo.toml
xngin-frontend/src/: ast.rs  error.rs  lib.rs  macros.rs  pretty.rs
xngin-frontend/src/parser/: ddl.rs  dialect.rs  dml.rs  expr.rs  mod.rs  query.rs  util.rs
xngin-frontend/src/parser/expr/: tests.rs
xngin-frontend/tests/: pretty.rs
xngin-index/: Cargo.toml
xngin-index/src/epoch/: collector.rs  epoch.rs  guard.rs  internal.rs  list.rs  macros.rs  mod.rs  queue.rs
xngin-index/src/epoch/atomic/: inline.rs  mod.rs  owned.rs  shared.rs
xngin-index/src/hot/: key.rs  mod.rs  node.rs  node_impl.rs  partial_key.rs  value.rs
xngin-plan/: Cargo.toml  builder.md
xngin-plan/src/: alias.rs  builder.rs  col.rs  error.rs  explain.rs  expr.rs  func.rs  id.rs  lgc.rs  lib.rs  op.rs  pred.rs  query.rs  reflect.rs  resolv.rs  rule.rs  scope.rs  setop.rs  type_infer.rs
xngin-plan/src/builder/: tests.rs
xngin-plan/src/join/: edge.rs  estimate.rs  graph.rs  mod.rs  vertex.rs
xngin-plan/src/lgc/: alias.rs  builder.rs  col.rs  mod.rs  op.rs  query.rs  reflect.rs  resolv.rs  scope.rs  setop.rs
xngin-plan/src/phy/: builder.rs  mod.rs
xngin-plan/src/rule/: assign_id.rs  col_prune.rs  derived_unfold.rs  expr_simplify.rs  fix.rs  joingraph_initialize.rs  mod.rs  op_eliminate.rs  outerjoin_reduce.rs  output_fix.rs  pred_move.rs  pred_pullup.rs  pred_pushdown.rs  type_fix.rs
xngin-protocol/: Cargo.toml  README.md
xngin-protocol/src/: buf.rs  error.rs  lib.rs
xngin-protocol/src/mysql/: auth.rs  col.rs  conn.rs  error.rs  flag.rs  handshake.rs  macros.rs  mod.rs  packet.rs  principal.rs  time.rs  value.rs
xngin-runtime/: Cargo.toml
xngin-runtime/src/: buf.rs  cancel.rs  digraph.rs  error.rs  lib.rs  phy.rs  res.rs
xngin-runtime/src/exec/: mod.rs  proj.rs  table_scan.rs
xngin-server/: Cargo.toml
xngin-server/src/: cancel.rs  chan.rs  lib.rs
xngin-server/src/exec/: builder.rs  mod.rs  proj.rs
xngin-server/src/mysql/: mod.rs  serve_tcp.rs  session.rs  signal.rs
xngin-storage/: Cargo.toml
xngin-storage/src/: attr.rs  bitmap.rs  block.rs  codec.rs  error.rs  lib.rs  psma.rs  sel.rs  slice_ext.rs  sma.rs
xngin-storage/src/codec/: mod.rs  single.rs
xngin-tpch-tests/: Cargo.toml
xngin-tpch-tests/src/: lib.rs
xngin-tpch-tests/tests/: build.rs  build_lgc.rs  col_prune.rs  parse.rs  reflect.rs  rule_optimize.rs  tpch_build.rs  tpch_parse.rs
(+84 files in other folders)
