[package]
name = "doradb-bench"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Benchmarks of X-Engine"
keywords = ["database", "benchmark"]
categories = ["database"]
repository = "https://github.com/jiangzhe/doradb/doradb-bench/"

[dependencies]
doradb-datatype = {version = "0.1.0", path = "../doradb-datatype"}
doradb-compute = {version = "0.1.0", path = "../doradb-compute"}
doradb-storage = {version = "0.1.0", path = "../doradb-storage"}
criterion = {version = "0.3", features = ["html_reports"]}
rand = "0.8.3"
pprof = {version = "0.4", features = ["flamegraph", "criterion"]}

[dev-dependencies]
bytemuck = "1.7"


[[bench]]
name = "bitmap_shift"
harness = false

[[bench]]
name = "bitmap_intersect"
harness = false

[[bench]]
name = "bitmap_extend"
harness = false

[[bench]]
name = "bitmap_count"
harness = false

[[bench]]
name = "bitmap_range_iter"
harness = false

[[bench]]
name = "codec_add"
harness = false

[[bench]]
name = "memcmp_sort"
harness = false

[[example]]
name = "codec_add"
