[package]
name = "doradb-catalog"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Catalog of X-Engine"
keywords = ["database"]
categories = ["database"]
repository = "https://github.com/jiangzhe/doradb/doradb-catalog/"

[dependencies]
doradb-datatype = { version = "0.1.0", path = "../doradb-datatype" }
semistr = "0.1"
bitflags = "1.3"
indexmap = "1.7"
thiserror = "1.0"
parking_lot = "0.12"
