[package]
name = "doradb-compute"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Computation module of X-Engine"
keywords = ["database", "vectorization"]
categories = ["database-implementations"]
repository = "https://github.com/jiangzhe/doradb/doradb-compute/"

[dependencies]
thiserror = "1.0"
libc = "0.2.101"
doradb-catalog = { version = "0.1.0", path = "../doradb-catalog" }
doradb-datatype = { version = "0.1.0", path = "../doradb-datatype" }
doradb-storage = { version = "0.1.0", path = "../doradb-storage" }
doradb-expr = { version = "0.1.0", path = "../doradb-expr" }
smallvec = {version = "1.8", features = ["union"]}

[dev-dependencies]
rand = "0.8"
anyhow = "1.0"
