[package]
name = "doradb-datatype"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Datatype module of X-Engine"
repository = "https://github.com/jiangzhe/doradb/doradb-datatype/"

[dependencies]
time = { version = "0.3", features = ["parsing", "formatting"] } 
fxd = "0.1"
static_init = "1.0"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
