[package]
name = "doradb-expr"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Expression module of X-Engine"
repository = "https://github.com/jiangzhe/doradb/doradb-expr/"

[dependencies]
doradb-datatype = { version = "0.1.0", path = "../doradb-datatype" }
doradb-catalog = { version = "0.1.0", path = "../doradb-catalog" }
smallvec = {version = "1.8", features = ["union"]}
thiserror = "1.0"
semistr = "0.1"
