[package]
name = "doradb-plan"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Planner module of X-Engine"
keywords = ["query", "planning", "optimization"]
categories = ["database-implementations"]
repository = "https://github.com/jiangzhe/doradb/doradb-plan/"

[dependencies]
doradb-datatype = { version = "0.1.0", path = "../doradb-datatype" }
doradb-catalog = { version = "0.1.0", path = "../doradb-catalog" }
doradb-sql = { version = "0.1.0", path = "../doradb-sql" }
doradb-expr = { version = "0.1.0", path = "../doradb-expr" }
doradb-storage = { version = "0.1.0", path = "../doradb-storage" }
doradb-compute = { version = "0.1.0", path = "../doradb-compute" }
aosa = "0.1"
slab = "0.4"
thiserror = "1.0"
semistr = "0.1"
fnv = "1.0"
indexmap = "1.7"
static_init = "1.0"
smallvec = {version = "1.8", features = ["union"]}
bitflags = "1.3"