[package]
name = "doradb-sql"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "SQL parser of X-Engine"
keywords = ["sql", "parser", "nom"]
categories = ["database-implementations", "parser-implementations"]
repository = "https://github.com/jiangzhe/doradb/doradb-sql/"

[dependencies]
nom = "7"
fnv = "1.0"
static_init = "1.0"
semistr = "0.1"
thiserror = "1.0"
aosa = "0.1"

[dev-dependencies]
anyhow = "1.0"
