[package]
name = "doradb-storage"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Storage module of X-Engine"
keywords = ["database", "encoding"]
categories = ["database-implementations"]
repository = "https://github.com/jiangzhe/doradb/doradb-storage/"

[dependencies]
doradb-datatype = { version = "0.1.0", path = "../doradb-datatype" }
smallvec = {version = "1.8", features = ["union"]}
thiserror = "1.0"
bitflags = "1.3"
bytemuck = "1.7"
parking_lot = "0.12.3"
libc = "0.2.164"

[dev-dependencies]
rand = "0.8"
