[package]
name = "doradb-storage"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Storage module of X-Engine"
keywords = ["database", "encoding"]
categories = ["database-implementations"]
repository = "https://github.com/jiangzhe/doradb/doradb-storage/"

[dependencies]
doradb-datatype = { version = "0.1.0", path = "../doradb-datatype" }
smallvec = {version = "1.8", features = ["union"]}
thiserror = "1.0"
bitflags = "1.3"
bytemuck = "1.7"
parking_lot = "0.12"
libc = "0.2.164"
crossbeam-utils = "0.8"
serde = { version = "1.0.216", features = ["derive"] }
bincode = { version = "2.0.0-rc", features = ["serde"] }
flume = "0.11"

[dev-dependencies]
rand = "0.8"
bitcode = { version = "0.6.3", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
