[package]
name = "doradb-tpch-tests"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "TPCH test cases of X-Engine"
repository = "https://github.com/jiangzhe/doradb/doradb-tpch-tests/"

[dependencies]
doradb-datatype = { version = "0.1.0", path = "../doradb-datatype" }
doradb-catalog = { version = "0.1.0", path = "../doradb-catalog" }
doradb-sql = { version = "0.1.0", path = "../doradb-sql" }
doradb-plan = { version = "0.1.0", path = "../doradb-plan" }
aosa = "0.1"
