[package]
name = "xngin-catalog"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Catalog of X-Engine"
keywords = ["database"]
categories = ["database"]
repository = "https://github.com/jiangzhe/xngin/xngin-catalog/"

[dependencies]
xngin-datatype = { version = "0.1.0", path = "../xngin-datatype" }
smol_str = "0.1"
bitflags = "1.3"
indexmap = "1.7"
thiserror = "1.0"
