[package]
name = "xngin-common"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Common module of X-Engine"
keywords = ["database"]
categories = ["database-implementations"]
repository = "https://github.com/jiangzhe/xngin/xngin-comon/"

[dependencies]
thiserror = "1.0"
bytemuck = "1.7"
smallvec = {version = "1.8", features = ["union"]}
byteorder = "1.4"

[dev-dependencies]
rand = "0.8"
anyhow = "1.0"
