[package]
name = "xngin-compute"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Computation module of X-Engine"
keywords = ["database", "vectorization"]
categories = ["database-implementations"]
repository = "https://github.com/jiangzhe/xngin/xngin-compute/"

[dependencies]
thiserror = "1.0"
libc = "0.2.101"
xngin-common = { version = "0.1.0", path = "../xngin-common" }
xngin-catalog = { version = "0.1.0", path = "../xngin-catalog" }
xngin-datatype = { version = "0.1.0", path = "../xngin-datatype" }
xngin-storage = { version = "0.1.0", path = "../xngin-storage" }
xngin-expr = { version = "0.1.0", path = "../xngin-expr" }
smallvec = {version = "1.8", features = ["union"]}

[dev-dependencies]
rand = "0.8"
anyhow = "1.0"
