[package]
name = "xngin-frontend"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Frontend parser of X-Engine"
keywords = ["database", "parser", "nom"]
categories = ["database-implementations", "parser-implementations"]
repository = "https://github.com/jiangzhe/xngin/xngin-frontend/"

[dependencies]
nom = "7"
fnv = "1.0"
static_init = "1.0"
smol_str = "0.1"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
