[package]
name = "xngin-index"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Index module of X-Engine"
keywords = ["index"]
categories = ["database-implementations"]
repository = "https://github.com/jiangzhe/xngin/xngin-index/"

[dependencies]
scopeguard = {version = "1.1", default-features = false}
memoffset = "0.6"
once_cell = "1"
crossbeam-utils = "0.8.11"
parking_lot = "0.12"

[dev-dependencies]
rand = "0.8"
