[package]
name = "xngin-runtime"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Runtime module of X-Engine"
keywords = ["database", "runtime", "execution"]
categories = ["database-implementations"]
repository = "https://github.com/jiangzhe/xngin/xngin-runtime/"

[dependencies]
event-listener = "2.5"
futures-lite = "1.12"
pin-project-lite = "0.2"
thiserror = "1.0"
flume = "0.10"

[dev-dependencies]
smol = "1.2"
