[package]
name = "xngin-server"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Server module of X-Engine"
keywords = ["server", "mysql"]
categories = ["database-implementations"]
repository = "https://github.com/jiangzhe/xngin/xngin-server/"

[dependencies]
thiserror = "1.0"
bitflags = "1.2"
event-listener = "2.5"
futures-lite = "1.12"
crypto = {version = "0.4", features = ["digest"] }
sha1 = "0.10"
sha2 = "0.10"
rsa = "0.8"
spki = "0.6"
rand = "0.8"
log = "0.4"
async-trait = "0.1"
async-net = "1.7"
async-io = "1.6"
easy-parallel = "3.2"
async-executor = "1.4"
flume = "0.10"
signal-hook = "0.3"
thread_local = "1.1"
scopeguard = "1.1"
xngin-storage = { version = "0.1.0", path = "../xngin-storage" }
semistr = "0.1"
fxd = "0.1"
pin-project-lite = "0.2"

xngin-sql = { version = "0.1.0", path = "../xngin-sql" }
xngin-catalog = { version = "0.1.0", path = "../xngin-catalog" }
xngin-plan = { version = "0.1.0", path = "../xngin-plan" }
xngin-protocol = { version = "0.1.0", path = "../xngin-protocol" }
xngin-compute = { version = "0.1.0", path = "../xngin-compute" }

[dev-dependencies]
async-task = "4.2"
env_logger = "0.10"
xngin-datatype = { version = "0.1.0", path = "../xngin-datatype" }
xngin-expr = { version = "0.1.0", path = "../xngin-expr" }
