[package]
name = "xngin-storage"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Storage module of X-Engine"
keywords = ["database", "encoding"]
categories = ["database-implementations"]
repository = "https://github.com/jiangzhe/xngin/xngin-storage/"

[dependencies]
xngin-common = { version = "0.1.0", path = "../xngin-common" }
xngin-datatype = { version = "0.1.0", path = "../xngin-datatype" }
smallvec = {version = "1.8", features = ["union"]}
